--- a/assets/css/app.css
+++ b/assets/css/app.css
@@ -269,3 +269,10 @@ input[type="submit"],
     text-align: center;
 }
 
+.fecha{
+
+    color: #4e4e4e;
+    margin-top: 8px;
+    font-size: 14px;
+}
+
